# oopango

./: .gitignore  Makefile.am  configure.ac  obj_font_desc.c  obj_font_map.c  obj_layout.c  oopango-uninstalled.pc.in  oopango.c  oopango.h  oopango.pc.in  pango_cairo.c  test-loading.lua
m4/: attributes.m4
test/: font_desc.lua  font_map.lua  general.lua  layout.lua
